--- a/client/www/templates/login.html
+++ b/client/www/templates/login.html
@@ -22,5 +22,21 @@
       </div>
     </form>
   </ion-content>
-</div>
+</div> 
+
+<!-- <div class="modal">
+  <form action="/login" method="post">
+      <div>
+          <label>Username:</label>
+          <input type="text" name="username"/>
+      </div>
+      <div>
+          <label>Password:</label>
+          <input type="password" name="password"/>
+      </div>
+      <div>
+          <input type="submit" value="Log In"/>
+      </div>
+  </form>
+</div> -->
 
